apps/network-system/envoy-gateway/config/admin/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-admin
  annotations:
    external-dns.alpha.kubernetes.io/target: &loadbalancerIP 10.0.0.250
spec:
  gatewayClassName: envoy

  infrastructure:
    annotations:
      metallb.io/loadBalancerIPs: *loadbalancerIP

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces: {from: Same} #? same namespace only, for https redirect
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces: {from: All} #? allow all namespaces for https
      tls:
        certificateRefs:
          - kind: Secret
            name: admin-tls
